--- a/Toupesu-2.0/src/assets/i18n/en_sa.json
+++ b/Toupesu-2.0/src/assets/i18n/en_sa.json
@@ -4,7 +4,7 @@
     "MENU_HOW_IT_WORKS" : "How it works",
     "MENU_REGISTER" : "Register",
     "MENU_JOIN_TONTINE" : "Join a Stokvel",
-    "MENU_SHARE_CODE_TONTINE" : "Share this code",
+    "MENU_SHARE_CODE_TONTINE" : "Share the code",
     "MENU_CONTACT" : "Contact",
     "MENU_LOGIN" : "Login",
     "MENU_MY_POFILE" : "My profile",
